# Jupyter-LC_index

./: .copier-answers.yml  .gitignore  .prettierignore  Dockerfile  LICENSE  MANIFEST.in  README.md  README_2.md  RELEASE.md  package-lock.json  package.json  pyproject.toml  setup.py
.github/workflows/: build.yml  check-release.yml  release.yml
_temp_extension/: .gitignore  .prettierignore  README.md  RELEASE.md  install.json  package.json  pyproject.toml
_temp_extension/.github/workflows/: build.yml  check-release.yml
_temp_extension/binder/: environment.yml  postBuild
_temp_extension/lc_index/: __init__.py
_temp_extension/src/: index.ts
binder/: environment.yml
example/: Generate SVG.ipynb  README.md  Test Notebook2.ipynb  sample.blockdiag
example/subdir/: README.md
lc_index/: __init__.py
lc_index/nbextension/: notebook_index.yaml
notebook_index/: __init__.py
notebook_index/nbextension/: main.css  main.js  notebook_index.yaml
src/: index.ts
tests/manual/examples/: README.md
ui-tests/: package.json
ui-tests/playwright-report/: index.html
ui-tests/tests/: lc_index.spec.ts
